--- a/pom.xml
+++ b/pom.xml
@@ -75,5 +75,12 @@
 			<artifactId>json</artifactId>
 			<version>20160810</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.xml/jaxb-api -->
+<dependency>
+    <groupId>javax.xml</groupId>
+    <artifactId>jaxb-api</artifactId>
+    <version>2.1</version>
+</dependency>
+		
 	</dependencies>
 </project>
